--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
 		}
 	],
 	"require": {
-		"illuminate/database": "^8.0",
-		"illuminate/filesystem": "^8.0",
-		"illuminate/support": "^8.0"
+		"illuminate/database": "^7.0|^8.0",
+		"illuminate/filesystem": "^7.0|^8.0",
+		"illuminate/support": "^7.0|^8.0"
 	},
 	"require-dev": {
 		"orchestra/testbench": "^5.0|^6.0"
